compiler-core/src/type_/tests/snapshots/gleam_core__type___tests__errors__alias_type_mismatch_error_message.snap
---
source: compiler-core/src/type_/tests/errors.rs
expression: "type MyAlias = Int\n\npub fn expect_alias(x: MyAlias) -> MyAlias { x }\n\npub fn bad() -> MyAlias {\n  expect_alias(\"hello\")\n}"
---
----- SOURCE CODE
type MyAlias = Int

pub fn expect_alias(x: MyAlias) -> MyAlias { x }

pub fn bad() -> MyAlias {
  expect_alias("hello")
}

----- ERROR
error: Type mismatch
  ┌─ /src/one/two.gleam:6:16
  │
6 │   expect_alias("hello")
  │                ^^^^^^^

Expected type:

    MyAlias (i.e. Int)

Found type:

    String
